# dual-jbl-sound

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.config/dual-jbl-sound/: config.json
.github/workflows/: ci.yml
src/dual_jbl_sound/: __main__.py  cli.py  config_store.py  pactl_parser.py  targets.py
tests/: test_cli_list_sinks.py  test_cli_start_stop.py  test_config_store.py  test_pactl_parser.py  test_target_selection.py
