[project]
name = "dual-jbl-sound"
version = "0.0.1"
description = "Route system audio to two Bluetooth speakers (dual mono / split LR) using PipeWire + BlueZ."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]